test/success/integration/_succ_expr_div_2.hs
x :: Double
x = 4 / 3
main = print x