test/fail/integration/_fail_sem_lformarg_1.hs
x :: Bool -> Bool -> Bool -> Bool
x y y = True
main = print "hello"